feat: :triangular_flag_on_post: add health check route
